Fixed snippets overflow.

--- a/browser/style/flex.css
+++ b/browser/style/flex.css
@@ -140,7 +140,7 @@ body {
 }
 
 #presets {
-	overflow: scroll
+	overflow: auto;
 }
 
 #dbg
